--- a/latex_thesis/conclusion/conclusion.tex
+++ b/latex_thesis/conclusion/conclusion.tex
@@ -1,23 +1,23 @@
 Using the weak field linearized equation, the Einstein's field equation in vacuum reduces to a tensorial form of the wave equation (\ref{wave_equation}), which tells us that the metric perturbation behaves as a wave and it travels at the speed of light.
-So, the metric perturbation is nothig but a propagating warpage of spacetime, that we call gravitational wave.\\
-Using the transverse traceless gaugue, we saw that the polarizations states of the gravitational radiation are only two: $h_{+}$ and $h_{\times}$.
+So, the metric perturbation is nothing but a propagating warpage of spacetime, that we call gravitational wave.\\
+Using the transverse traceless gauge, we saw that the polarizations states of the gravitational radiation are only two: $h_{+}$ and $h_{\times}$.
 The two polarization modes are directly related to the way they stretch and squeeze spacetime and, therefore, they can change the proper distance between free falling particles according in the shape of $+$ or $\times$.
 Such effect can be exploited to detect gravitational waves using interferometers.\\
 We analyzed the nature of gravitational wave  and we found out that it has quadrupolar nature and the GW amplitude scales as $1/r$.
 We derived the quadrupole formula stressing the importance of the approximations and we applied it to a slowly moving binary system.
 The main result of such example told us that the gravitational wave radiation has a frequency that is twice the orbital angular frequency.\\
 Subsequently we studied the simulations of two compact binaries, and through a Fourier analysis we confirmed that the angular frequency of the gravitational waves of BBH and BNS is twice the orbital angular frequency.\\
-The orbital angular frequency is almost constant for the first part of the inspiralling phase, and therefore, in this time range it is possible to recognize a sinusoidal behavior of the gravitational wave similiar to the quadrupole formula approximation.
+The orbital angular frequency is almost constant for the first part of the inspiralling phase, and therefore, in this time range it is possible to recognize a sinusoidal behavior of the gravitational wave similar to the quadrupole formula approximation.
 However, the binary system loses energy in the emission of gravitational waves and, therefore, the radius of the binary system decreases. 
 As the radius decreases, the orbital angular frequency increases, and therefore, the angular frequency of the gravitational wave does as well. 
-During the evolution the aplitude of the GW increases until it reaches the maximum value before the merger.
-Both BBH and BNS show similiar gravitational singnals during the inspiralling phase.\\
+During the evolution the amplitude of the GW increases until it reaches the maximum value before the merger.
+Both BBH and BNS show similar gravitational signals during the inspiralling phase.\\
 For a binary black hole, the gravitational wave signal is damped after the merger, whereas for the considered binary neutron star, the radiation amplitude slowly decreases.
 Furthermore, the bouncing in the gravitational wave amplitude of the BNS denotes that the cores are bouncing off each other.\\
-In addition, we tested succesfully the codes provided by the Einstein Toolkit \cite{EinsteinToolkit:web}, and we also tested the quasi-equilibrium initial conditions of \cite{tichy_quasi-equilibrium_2004}.\\
+In addition, we tested successfully the codes provided by the Einstein Toolkit \cite{EinsteinToolkit:web}, and we also tested the quasi-equilibrium initial conditions of \cite{tichy_quasi-equilibrium_2004}.\\
 Further researches and more accurate simulations should be done in order to precisely explain the oscillations mode of the orbital angular frequency and of the gravitational strain of BBH-b6, BBH-b7, BBH-b10.\\
-We have analyzed only few of the many features that can be obtained from the gravitationa wave signals.
-In fact, by combining the powerful computational knowledge of numerical relativity with the new "eyes" given by the gravitational wave detectors, it is possible to study thoroughly fascinating atrophysical processes involving black holes mergers and neutron star gamma ray bursts.
+We have analyzed only few of the many features that can be obtained from the gravitational wave signals.
+In fact, by combining the powerful computational knowledge of numerical relativity with the new "eyes" given by the gravitational wave detectors, it is possible to study thoroughly fascinating astrophysical processes involving black holes mergers and neutron star gamma ray bursts.
 
 
 
