--- a/latex_thesis/effects_gw/ef_gw.tex
+++ b/latex_thesis/effects_gw/ef_gw.tex
@@ -1,5 +1,5 @@
 We want now to explain the important physical consequences of the theoretical results developed in the previous section.
-Throughout the next sections we will use the linearized theory of gravitatinal waves and we consider our metric to be in the TT gauge.
+Throughout the next sections we will use the linearized theory of gravitational waves and we consider our metric to be in the TT gauge.
 %%in the second section we giva a coordinate-independent measure of the gravitational wave effects.
 \subsection{Free Falling Particles and Detection Principles}
 \label{free_particles_detection_principles}
@@ -34,7 +34,7 @@ However, we recall from the TT gauge that
 h^{\T}_{0 \alpha} = 0 \qquad  \qquad h^{\T}_{\mu \nu} = \bar{h}^{\T}_{\mu \nu} 
 \]
 for all $\alpha$. Hence, the initial acceleration of the particle is zero and a free particle, initally at rest, will remain at rest indefinitely.\\
-In this constext ''being at rest'' means that the coordinates of the particle do not change, so the TT gauge is a good choice of coordinate. As the gravitational waves propagates, the coordinate system moves with the ripples of the spacetime, in order to keep the particle in the initial position.
+In this context ''being at rest'' means that the coordinates of the particle do not change, so the TT gauge is a good choice of coordinate. As the gravitational waves propagates, the coordinate system moves with the ripples of the spacetime, in order to keep the particle in the initial position.
 In the TT gauge free falling bodies are not influenced by  GWs, and their coordinate separation is constant \cite{martin_notes}.\\
 However, the proper separation is not constant, so let us calculate it.\\
 Consider two free falling test particles located at $z=0$ and separated on the x axis by a coordinate distance $L_c$. We still consider a plane wave in the TT gauge propagating in the z direction.\\
