--- a/latex_thesis/introduction/intro.tex
+++ b/latex_thesis/introduction/intro.tex
@@ -6,7 +6,7 @@ any change to a gravitating source is communicated to a distant observer no fast
 Such communication of a change in spacetime from a source to an observer leads to the idea that there must exists some notion of gravitational radiation.\\
 From the General Theory of Relativity, it is possible to obtain a tensorial wave equation, which governs the behavior of such gravitational radiation.
 Therefore, we propose in  section(\ref{from_equation_to_solution}) the derivation of the gravitational wave solution from the Einstein's field equation using the linearized approximation.
-Applying the transverse traceless gauge, we find out that the number of raditative degrees of freedom of the general theory of relativity is two.\\
+Applying the transverse traceless gauge, we find out that the number of radiative degrees of freedom of the general theory of relativity is two.\\
 The triumph of theoretical prediction of the gravitational waves (GW) is confirmed by the several experiments.\\
 The first indirect evidence of the existence of gravitational waves was given by Hulse and Taylor \cite{weisberg_relativistic_2004,weisberg_timing_2010}. 
 From the study of the orbital decay of a binary pulsar, Hulse and Taylor inferred the emission of gravitational waves, since the two neutron stars were spiraling together at just the rate predicted by general relativity’s theory of gravitational radiation reaction.\\
@@ -20,19 +20,19 @@ However, a thorough study of a gravitational signals needs to be combined with a
 So, firstly, we find a simple theoretical model by solving the linearized Einstein's field equation with the presence of matter in section(\ref{production_gw}).
 Then, we apply the obtained solution, the so-called quadrupole formula, for a slowly-moving binary source.
 And, finally, in the last section(\ref{numerical_evolution}), by using the open-source computational infrastructure Einstein Tookit\cite{loffler_einstein_2012}, we study the relativistic numerical simulations of compact binaries: binary black holes (BBH) with six different quasi-equilibrium initial configurations and a binary neutron star (BNS) is accomplished.
-The theoretical prediction from the quadrupole formula, that the frequency of the gravitational wave is twice the orbital angular frequncy of the binary, is confirmed in the simulations through a Fourier analysis of the gravitational signal.
+The theoretical prediction from the quadrupole formula, that the frequency of the gravitational wave is twice the orbital angular frequency of the binary, is confirmed in the simulations through a Fourier analysis of the gravitational signal.
 In addition, we propose a simple gravitational wave extraction method and we also analyze the rest mass density of the binary neutron stars in order to find the relation with the gravitational signal behavior.\\
 
 \textbf{Notation}\\
-Throughout, we will use a spacelike signature $(-,+,+,+)$ and a system of geometrised units in which $G=c=1$, however depending on the need we will also indicate explicitely the speed of light $c=299\,792\,458 \,\metre \per \second$, and the Newton constant of gravitation $G=6.67408 \times 10^{-11} \, \newton \usk \metre^2 \usk \kilogram^{-2}$ \cite{codata_blog_codata_nodate}.\\
-We use the Einstein summation convention for  reapeted indeces.
+Throughout, we will use a spacelike signature $(-,+,+,+)$ and a system of geometrised units in which $G=c=1$, however depending on the need we will also indicate explicitly the speed of light $c=299\,792\,458 \,\metre \per \second$, and the Newton constant of gravitation $G=6.67408 \times 10^{-11} \, \newton \usk \metre^2 \usk \kilogram^{-2}$ \cite{codata_blog_codata_nodate}.\\
+We use the Einstein summation convention for  reapeted indexes.
 Greek letters are used for summing over all the indeces from 0 up to 3,
-whereas latin letters sum only on the spatial indeces 1 2 and 3.\\
+whereas latin letters sum only on the spatial indexes 1 2 and 3.\\
 We use the controviariant notation of a four-vector
 \[
 x^{\sigma} = (x^{0},x^{1}, x^{2},x^{3})
 \]
-or, when we want to aid the comparison with classical Newtonian expression, we use boldface to denote the spatial vectors $\vb{x} =(x,y,z)$ and we rewrtie the four-vectors as 
+or, when we want to aid the comparison with classical Newtonian expression, we use boldface to denote the spatial vectors $\vb{x} =(x,y,z)$ and we rewrite the four-vectors as 
 \[
 x^{\sigma} = (x^{0},x^{1}, x^{2},x^{3}) = (t,\vb{x}) = (t,x,y,z)
 \]
